# aws-lambda-rust-test

./: .gitignore  Cargo.toml  README.md  compile.sh  main.tf
.cargo/: config.toml
src/: main.rs
