[package]
name = "aws-lambda-rust-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.4.1"
lambda_http = "0.4.1"
tokio = "1.15.0"
serde = "1.0.132"
serde_json = "1.0.73"
http = "0.2.6"
lambda_runtime_errors = "0.1.1"


[[bin]]
name = "bootstrap"
path = "src/main.rs"

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true
